# ladybug-memory

./: .env.example  .gitignore  README.md  example.py  example_dynamic_schema.py  example_extended_clustering.py  example_kg_extraction.py  example_long_with_clustering.py  pyproject.toml
.github/workflows/: ci.yml
docs/: h-glue-architecture.md
examples/: example_long_with_clustering.py
src/lbmemory/: __init__.py  chunker.py  entities.py  extraction.py  ladybug.py  schema_discovery.py
src/memory/: __init__.py  chunker.py  entities.py  extraction.py  interface.py  ladybug.py  schema_discovery.py
tests/: test_basic.py  test_dynamic_schema.py  test_kg_extraction.py
