[project]
name = "ladybug-memory"
version = "0.1.1"
description = "Agent memory interface implemented using LadybugDB"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "real-ladybug>=0.14.0",
    "fastembed",
    "gliner>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
kg = [
    "icebug",
    "litellm",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
